# copyd

./: .gitignore  Cargo.toml  DEVELOPMENT_STATUS.md  Makefile  README.md  SESSION_SUMMARY.md
.github/workflows/: ci.yml
config/: copyd.toml
copyctl/: Cargo.toml  build.rs
copyctl/src/: cli.rs  client.rs  main.rs  protocol.rs  tui.rs
copyctl/src/tui/: app.rs  config_editor.rs  file_browser.rs  help_screen.rs  job_monitor.rs  mod.rs
copyd/: Cargo.toml  build.rs
copyd-protocol/: Cargo.toml  build.rs
copyd-protocol/src/: lib.rs
copyd/src/: checkpoint.rs  config.rs  copy_engine.rs  daemon.rs  directory.rs  error.rs  io_uring_engine.rs  job.rs  lib.rs  main.rs  metrics.rs  monitor.rs  profiler.rs  regex_rename.rs  security.rs  sparse.rs  utils.rs  verify.rs
copyd/tests/: integration_tests.rs
examples/: demo.sh
proto/: copyd.proto
systemd/: copyd-tmpfiles.conf  copyd.service  copyd.socket
