[package]
name = "copyctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Modern copy client with CLI and TUI interfaces"

[[bin]]
name = "copyctl"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
crossterm.workspace = true
ratatui.workspace = true
regex.workspace = true
copyd-protocol = { path = "../copyd-protocol" }
dirs = "5.0"

# Protocol and messaging
prost = "0.12"
prost-types = "0.12"

# TUI and CLI
indicatif = "0.17"
console = "0.15"

# File system operations
walkdir = "2.4"
glob = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async
futures = "0.3"

[build-dependencies]
prost-build = "0.12" 